Fixed negative margin in header so it doesn’t overlap with nav, added styling to the input and textarea for the forms.

--- a/styles/sass/partials/_base.scss
+++ b/styles/sass/partials/_base.scss
@@ -118,12 +118,16 @@ button {
         border-right: none;
         margin: 0 0 5% 0;
         border-bottom: 1px solid;
+        color: $primary;
+        font-family: $bodyFont;
     }
     
     textarea {
         padding: 7%;
         margin: 5% 0;
         border: 1px solid;
+        color: $primary;
+        font-family: $bodyFont;
 
         &::placeholder {
                 color: $primary;
