--- a/styles/sass/partials/_homepage.scss
+++ b/styles/sass/partials/_homepage.scss
@@ -31,7 +31,7 @@
 
 .mainHeader img{
     position: absolute;
-    bottom: -41rem;
+    bottom: -43rem;
     right: 0;
     width: 50%;
 }
